--- a/develop/output/team.html
+++ b/develop/output/team.html
@@ -31,9 +31,21 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 5555</li>
+            <li class="list-group-item">ID: 13232</li>
             <li class="list-group-item">Email: <a href="mailto:example@email.com">example@email.com</a></li>
-            <li class="list-group-item">Office number: 4444</li>
+            <li class="list-group-item">Office number: 12323</li>
+        </ul>
+    </div>
+</div><div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">sdfas</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: sdfasdf</li>
+            <li class="list-group-item">Email: <a href="mailto:sdfasdf">sdfasdf</a></li>
+            <li class="list-group-item">School: asdfas</li>
         </ul>
     </div>
 </div>
