--- a/develop/output/team.html
+++ b/develop/output/team.html
@@ -31,31 +31,31 @@
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4444</li>
-            <li class="list-group-item">Email: <a href="mailto:Example@email.com">Example@email.com</a></li>
-            <li class="list-group-item">Office number: 1234</li>
+            <li class="list-group-item">ID: 2323</li>
+            <li class="list-group-item">Email: <a href="mailto:example@email.com">example@email.com</a></li>
+            <li class="list-group-item">Office number: 7777</li>
         </ul>
     </div>
 </div><div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Jason</h2>
+        <h2 class="card-title">Chris</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 7777</li>
+            <li class="list-group-item">ID: 4444</li>
             <li class="list-group-item">Email: <a href="mailto:example@email.com">example@email.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/Mwimbe1105@github.com" target="_blank" rel="noopener noreferrer">Mwimbe1105@github.com</a></li>
         </ul>
     </div>
 </div><div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Chris</h2>
+        <h2 class="card-title">Jason</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 54321</li>
+            <li class="list-group-item">ID: 56233423</li>
             <li class="list-group-item">Email: <a href="mailto:example@email.com">example@email.com</a></li>
             <li class="list-group-item">School: UOFU</li>
         </ul>
