--- a/develop/output/team.html
+++ b/develop/output/team.html
@@ -26,38 +26,51 @@
                   
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Mckerry</h2>
+        <h2 class="card-title">sadfasdf</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4444</li>
-            <li class="list-group-item">Email: <a href="mailto:example@email.com">example@email.com</a></li>
-            <li class="list-group-item">Office number: 2323</li>
+            <li class="list-group-item">ID: asdfasdfas</li>
+            <li class="list-group-item">Email: <a href="mailto:sadfasdf">sadfasdf</a></li>
+            <li class="list-group-item">Office number: asdfasdf</li>
+        </ul>
+    </div>
+</div>,  
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">asdfasdf</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: asdfasdf</li>
+            <li class="list-group-item">Email: <a href="mailto:asdfasdf">asdfasdf</a></li>
+            <li class="list-group-item">Office number: asdf</li>
         </ul>
     </div>
 </div><div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Jason</h2>
+        <h2 class="card-title">fasdfasdf</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1234</li>
-            <li class="list-group-item">Email: <a href="mailto:example@email.com">example@email.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/Mwimbe@github.com" target="_blank" rel="noopener noreferrer">Mwimbe@github.com</a></li>
+            <li class="list-group-item">ID: asdfadsfasd</li>
+            <li class="list-group-item">Email: <a href="mailto:asdfasdfasdf">asdfasdfasdf</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/asdfasdfasdf" target="_blank" rel="noopener noreferrer">asdfasdfasdf</a></li>
         </ul>
     </div>
 </div><div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Chris</h2>
+        <h2 class="card-title">asdfasdf</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 54321</li>
-            <li class="list-group-item">Email: <a href="mailto:example@email.com">example@email.com</a></li>
-            <li class="list-group-item">School: UOFU</li>
+            <li class="list-group-item">ID: asdfasdf</li>
+            <li class="list-group-item">Email: <a href="mailto:asdfasdf">asdfasdf</a></li>
+            <li class="list-group-item">School: asdfasdf</li>
         </ul>
     </div>
 </div>
